# symbiote

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/core/: component.hpp  entity.hpp  entitymanager.hpp  system.hpp
include/core/ecs/: component.hpp  entity.hpp  entitymanager.hpp
include/game/components/: rigidbody.hpp  transform.hpp
include/game/components/rigidbody/: rigidbody.hpp
include/game/components/transform/: transform.hpp
include/game/systems/: physics.hpp  renderer.hpp
include/game/systems/physics/: physics.hpp
include/game/systems/renderer/: renderer.hpp
include/game/systems/renderer/vulkan/: vulkan.hpp
src/: main.cpp
src/core/: component.cpp  entity.cpp  entitymanager.cpp  system.cpp
src/core/ecs/: component.cpp  entity.cpp  entitymanager.cpp  system.cpp
src/game/components/: rigidbody.cpp  transform.cpp
src/game/components/rigidbody/: rigidbody.cpp
src/game/components/transform/: transform.cpp
src/game/systems/: physics.cpp  renderer.cpp
src/game/systems/physics/: physics.cpp
src/game/systems/renderer/: renderer.cpp
src/game/systems/renderer/vulkan/: vulkan.cpp
tests/: test_entities.cpp  test_entitymanager.cpp  test_lifecycle.cpp  test_performance.cpp  test_systems.cpp
tests/googletest/googletest/include/gtest/internal/: gtest-port.h
tests/test_components/: components.cpp  components.hpp
tests/test_systems/: systems.cpp  systems.hpp
